Bug 396781 - kmail no longer shows new mails
Summary: kmail no longer shows new mails
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-23 06:37 UTC by Martin Koller
Modified: 2018-07-30 06:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2018-07-23 06:37:08 UTC
since a recent update (yesterday or so) kmail no longer shows the new mails in the message list.
I see the number of new mails e.g. in the systray notifier, I see the same number  in the folder tree beside the "inbox" name and also in the favorites but clicking on my "inbox" folder does not show these new mails.
Selecting any other folder and going back to "inbox" does not help.
(In recent versions I sometimes had the same problem but often clicking on a different folder and back to "inbox" solved the issue. No more it seems).
"Expand all threads" or "got to next/prev unread mail" does not help either.

Only solution is to quit kmail and restart it. After the new start, the new mails correctly show up
Comment 1 Christophe Marin 2018-07-24 08:49:22 UTC
I saw that issue a couple days ago, rebuilding everything was enough to fix the issue.
Comment 2 Richard Bos 2018-07-24 12:55:03 UTC
Rebuilding what?
- The code?
- Or the data?

When data, how did you rebuild it?
Comment 3 Martin Koller 2018-07-25 10:05:24 UTC
Did now a clean build, but does not resolve the problem.
Comment 4 Laurent Montel 2018-07-27 13:16:49 UTC
I confirm that I have this problem too.
I rebuild kdepim

I need to restart kmail after receiving emails...

It seems that it's an akonadi problem.
Comment 5 Daniel Vrátil 2018-07-27 19:00:35 UTC
Git commit a9af352959abf95c25c6bc6e42df34a192d14ee8 by Daniel Vrátil.
Committed on 27/07/2018 at 18:59.
Pushed by dvratil into branch 'Applications/18.08'.

Server: fix Item notifications being rejected on mimetype filters
FIXED-IN: 5.9

M  +2    -0    src/server/storage/notificationcollector.cpp

https://commits.kde.org/akonadi/a9af352959abf95c25c6bc6e42df34a192d14ee8
Comment 6 Laurent Montel 2018-07-30 06:32:24 UTC
I confirm it's fixed.
Thanks