Server: fix Item notifications being rejected on mimetype filters

BUG: 396781
FIXED-IN: 5.9